// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmModal renders correctly hidden state 1`] = `null`;

exports[`ConfirmModal renders correctly loading state 1`] = `
<div
  className="css-yhrqyo"
  onMouseDown={[Function]}
>
  <div
    className="css-jj4e43"
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <h2
      className="css-1hc1w8l"
    >
      Please confirm
    </h2>
    <svg
      className="css-1lko8op"
      onClick={[MockFunction]}
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#close"
      />
    </svg>
    <div
      className="css-0"
    >
      Removing user John Appleseed
    </div>
    <div
      className="css-lwqd8y"
    >
      <div
        className="css-99wgdf"
      >
        <div
          className="css-12ibiio"
        >
          <button
            className="css-tn4srk"
            onClick={[MockFunction]}
            type="button"
          >
            Cancel
          </button>
        </div>
        <div
          className="css-12ibiio"
        >
          <button
            className="css-1ndsj8n"
            onClick={[MockFunction]}
            type="button"
          >
            Remove
            <div
              className="css-9lvo7z"
            >
              <svg
                className="css-1xsffl2"
                viewBox="0 0 128 128"
              >
                <use
                  xlinkHref="#icon-spinner"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      className="css-vnc1z7"
      onFocus={[Function]}
      tabIndex="0"
    />
  </div>
</div>
`;

exports[`ConfirmModal renders correctly visible state 1`] = `
<div
  className="css-yhrqyo"
  onMouseDown={[Function]}
>
  <div
    className="css-jj4e43"
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <h2
      className="css-1hc1w8l"
    >
      Please confirm
    </h2>
    <svg
      className="css-1lko8op"
      onClick={[MockFunction]}
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#close"
      />
    </svg>
    <div
      className="css-0"
    >
      Removing user John Appleseed
    </div>
    <div
      className="css-lwqd8y"
    >
      <div
        className="css-99wgdf"
      >
        <div
          className="css-12ibiio"
        >
          <button
            className="css-tn4srk"
            onClick={[MockFunction]}
            type="button"
          >
            Cancel
          </button>
        </div>
        <div
          className="css-12ibiio"
        >
          <button
            className="css-e7ftki"
            onClick={[MockFunction]}
            type="button"
          >
            Remove
          </button>
        </div>
      </div>
    </div>
    <div
      className="css-vnc1z7"
      onFocus={[Function]}
      tabIndex="0"
    />
  </div>
</div>
`;
